Spring-security is finalized. Added UserValidator, ability to add new user account or new employee account

--- a/src/main/webapp/res/forMainPages.css
+++ b/src/main/webapp/res/forMainPages.css
@@ -3,3 +3,11 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.nav.navbar-nav li a {
+    color: grey;
+}
+
+.nav.navbar-nav a:hover {
+    color: white;
+}
