--- a/src/main/webapp/res/css/forMainPages.css
+++ b/src/main/webapp/res/css/forMainPages.css
@@ -1,5 +1,5 @@
 body{
-    background: url(img/train21.jpg);
+    background: url(../img/train21.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
