Refactoring ticket purchase

--- a/src/main/webapp/res/css/sbb.classes.css
+++ b/src/main/webapp/res/css/sbb.classes.css
@@ -12,3 +12,13 @@
     text-decoration: none;
     color: #d9534f;
 }
+
+.link-no-dec{
+    color: black;
+}
+
+.link-no-dec:hover{
+    text-decoration: none;
+    color: black;
+    cursor: default;
+}
